# winsvc

./: Cargo.toml  README.md  TODO.md  svc.toml
src/: cli.rs  config.rs  gensvc.rs  jobobjects.rs  main.rs  service_control.rs  svc.rs  test.rs  winsvc.rs
