[package]
name = "winsvc"
version = "0.1.0"
authors = ["Kevin Parsons <kevpar@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win_etw_macros = "0.1.*"
win_etw_provider = "0.1.*"
clap = "2.33"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
winapi = "0.3"