[package]
name = "winsvc"
version = "0.1.0"
authors = ["Kevin Parsons <kevpar@microsoft.com>"]
edition = "2021"
description = "Utility to help run command-line programs as Windows services"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
winapi = { version = "0.3", features = [
    "winsvc",
    "debugapi",
    "jobapi2",
    "impl-default",
    "handleapi",
] }
windows-service = "0.4.0"
once_cell = "1.5"
shared_child = "1.0.0"
crossbeam-channel = "0.5"
anyhow = "1.0.57"
log = "0.4.17"
eventlog = "0.1.1"
